# System_AI

./: .gitignore  README.md  pyproject.toml
config/: config.json  debug.json  permissions.json  sandbox.json
core/: __init__.py  ai_router.py  app_context.py  boot_check.py  contracts.py  discovery_engine.py  enhanced_tool_loader.py  executor.py  gateway.py  health.py  health_manager.py  health_manager_enhanced.py  hybrid_registry.py  llm_manager.py  main.py  main.py.backup  memory.py  output_cleaner.py  performance_manager.py  production_config.py  quality_metrics.py  recovery_manager.py  recovery_prompting.py  regression_runner.py  release_gate.py  reliability.py  router.py  schema_validator.py  session_resume.py  session_state.py  setup_wizard.py  skill_loader.py  system_diagnostics.py  test_suite.py  timeout_manager.py  tool_loader.py  tool_output_validator.py  tool_registry.py  trace.py  watchdog.py
core/integration/: main_glue.py  wiring.py
docs/: ENHANCED_FEATURES.md  SYSTEM_VERIFICATION_REPORT.md  analysis.md
external_skills/: external-test-skill.md
runtime/: discovery_manifest.json  test-note-1.txt
skills/: codegen_linter_skill.md  data_skill.py  local-test-skill.md  math_skill.py  text_skill.py
tests/: diagnostic_test.py  full_system_test.py  module_wiring_test.py  startup_test.py  test_suite.py  wiring_test.py
tools/: codegen_tools.py  discover_tools.py  file_tools.py  linter_tools.py  list_dir.py  shell_tools.py  show_cuda.py  system_tools.py  tool_schema.json  tools_manifest.json
